--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
                     <a href="" class="animated slideInLeft btn-read-more">READ MORE</a>
 
                 </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeInRight" data-wow-delay="0.1s"
-                    style="max-height: 500px; height: 500px;">
+                <div class="col-lg-6 pe-lg-0 wow fadeInRight style-month-img-div" data-wow-delay="0.1s">
                     <div class="position-relative h-100 style-month-img">
                         <img class="position-absolute img-fluid h-100" src="img/elan/1Asset 3.png"
                             style="object-fit: cover; border-radius: 50%; margin: 0 auto;" alt="">
@@ -400,7 +399,7 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid footer p-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class=" border-top container-fluid footer p-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container-fluid py-4 p-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
