--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
                     </p>
                 </div>
-                
+
                 <div class="testimonial-item p-2 text-center">
                     <i class="fa fa-quote-right fa-3x text-primary position-absolute top-0 end-0 mt-n3 me-4"></i>
                     <div class="d-flex align-items-center mb-4 flex-column">
@@ -477,7 +477,7 @@ There is so much to write about my experience with Elan however I think my weddi
                         &copy; <a class="text-uppercase" href="#">Elan Design Studio</a>
                     </div>
                     <div class="col-md-12 text-center mb-3 mb-md-0 text-white text-uppercase">
-                        37, Meanee Avenue, Sindhi Colony, Bangalore 560042
+                        37, Meanee Ave Rd, Sindhi Colony, Sivanchetti Gardens, Bengaluru, Karnataka 560042, India
                     </div>
                 </div>
             </div>
